--- a/styles/configuration.css
+++ b/styles/configuration.css
@@ -1,51 +1,55 @@
 #configuration-overlay {
-  text-align: center;
+    text-align: center;
 }
 #configuration-overlay .form-control {
-  margin: 0.5rem 0;
+    margin: 0.5rem 0;
 }
 
 #configuration-overlay label {
-  display: block;
-  font-weight: 700;
-  margin-right: 0.5rem;
+    display: block;
+    font-weight: 700;
+    margin-right: 0.5rem;
 }
 
 #configuration-overlay input {
-  border: 1px solid rgb(204, 204, 204);
-  padding: 0.35rem;
+    border: 1px solid rgb(204, 204, 204);
+    padding: 0.35rem;
+}
+#configuration-overlay input.error {
+    background-color: rgb(255, 201, 227);
+    border: 1px solid rgb(255, 82, 166);
 }
 
 #game-configuration {
-  width: 90%;
-  max-width: 40rem;
-  margin: 3rem auto;
-  text-align: center;
+    width: 90%;
+    max-width: 40rem;
+    margin: 1rem auto;
+    text-align: center;
 }
 #game-configuration ol {
-  list-style: none;
-  padding: 0;
-  display: flex;
+    list-style: none;
+    padding: 0;
+    display: flex;
 }
 #game-configuration li {
-  margin: 1rem;
-  padding: 1rem;
-  background-color: rgb(243, 228, 255);
-  border-radius: 4px;
-  box-shadow: 0 7px 9px -5px rgb(0 0 0 / 10%);
-  width: 50%;
+    margin: 1rem;
+    padding: 1rem;
+    background-color: rgb(243, 228, 255);
+    border-radius: 4px;
+    box-shadow: 0 7px 9px -5px rgb(0 0 0 / 10%);
+    width: 50%;
 }
 #game-configuration h2 {
-  font-size: 1rem;
-  margin: 0.5rem 0;
+    font-size: 1rem;
+    margin: 0.5rem 0;
 }
 #game-configuration h3 {
-  font-size: 1.5rem;
-  margin: 0.5rem 0;
-  color: rgb(94, 4, 167);
+    font-size: 1.5rem;
+    margin: 0.5rem 0;
+    color: rgb(94, 4, 167);
 }
 #game-configuration .player-symbol {
-  font-size: 2rem;
-  font-weight: 700;
-  color: rgb(47, 4, 82);
+    font-size: 2rem;
+    font-weight: 700;
+    color: rgb(47, 4, 82);
 }
