--- a/styles/styles.css
+++ b/styles/styles.css
@@ -39,3 +39,13 @@ button:hover {
     background-color: rgb(241, 227, 253);
     border: 1px solid rgb(241, 227, 253);
 }
+
+div#status {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #570894;
+    color: white;
+    padding: 0.5rem 5%;
+    height: 2.5rem;
+}
