--- a/views/ejs/recommend.ejs
+++ b/views/ejs/recommend.ejs
@@ -12,11 +12,23 @@
             <form action="<%= links.recommend %>" method="POST">
                 <div class="form-control">
                     <label for="name">Restaurant name</label>
-                    <input type="text" id="name" name="name" required />
+                    <input
+                        type="text"
+                        id="name"
+                        name="name"
+                        required
+                        value="<%= data.name %>"
+                    />
                 </div>
                 <div class="form-control">
                     <label for="address">Address</label>
-                    <input type="text" id="address" name="address" required />
+                    <input
+                        type="text"
+                        id="address"
+                        name="address"
+                        required
+                        value="<%= data.address %>"
+                    />
                 </div>
                 <div class="form-control">
                     <label for="cuisine">Type of cuisine</label>
@@ -26,11 +38,17 @@
                         name="cuisine"
                         placeholder="e.g. Mexican"
                         required
+                        value="<%= data.cuisine %>"
                     />
                 </div>
                 <div class="form-control">
                     <label for="website">Restaurant website</label>
-                    <input type="url" id="website" name="website" />
+                    <input
+                        type="url"
+                        id="website"
+                        name="website"
+                        value="<%= data.website %>"
+                    />
                 </div>
                 <div class="form-control">
                     <label for="description">Why do you recommend it?</label>
@@ -39,7 +57,9 @@
                         id="description"
                         rows="5"
                         required
-                    ></textarea>
+                    >
+<%= data.description %></textarea
+                    >
                 </div>
                 <button>Share Restaurant</button>
             </form>
