add unique id for restaurants

--- a/views/ejs/_restaurant-item.ejs
+++ b/views/ejs/_restaurant-item.ejs
@@ -7,7 +7,7 @@
         </div>
         <p><%= restaurant.description %></p>
         <div class="restaurant-actions">
-            <a href="<%= `${links.details}/${restaurant.name}` %>"
+            <a href="<%= `${links.details}/${restaurant.id}` %>"
                 >View Restaurant</a
             >
         </div>
