--- a/views/ejs/restaurant-details.ejs
+++ b/views/ejs/restaurant-details.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <%- include('_head') %>
+        <link rel="stylesheet" href="/styles/restaurant.css" />
     </head>
 
     <body>
