--- a/views/ejs/restaurant-details.ejs
+++ b/views/ejs/restaurant-details.ejs
@@ -8,10 +8,10 @@
     <body>
         <%- include('_header', links); %> <%- include('_side-drawer', links); %>
         <main>
-            <h1>TITLE OF RESTAURANT[<%= restaurantID %>]</h1>
-            <p>Cuisine | Address</p>
-            <p>Description of restaurant</p>
-            <p><a href="#">View Website</a></p>
+            <h1><%= restaurant.name %></h1>
+            <p><%= restaurant.cuisine %> | <%= restaurant.address %></p>
+            <p><%= restaurant.description %></p>
+            <p><a href="<%= restaurant.website %>">View Website</a></p>
         </main>
     </body>
 </html>
