--- a/views/ejs/restaurants/restaurants.ejs
+++ b/views/ejs/restaurants/restaurants.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <%- include('_head') %>
-        <link rel="stylesheet" href="/styles/restaurant.css" />
+        <link rel="stylesheet" href="/restaurants/styles/restaurant.css" />
     </head>
 
     <body>
