--- a/public/blog/styles/posts.css
+++ b/public/blog/styles/posts.css
@@ -10,7 +10,7 @@
 }
 
 .post-item {
-    margin: 1rem 0;
+    margin: 2rem 0;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
     border-radius: 8px;
     padding: 1rem;
@@ -22,11 +22,15 @@
     margin: 0.5rem 0;
     color: hsl(254deg 60% 41% / 95%);
 }
-.post-item address {
-    color: hsl(254deg 60% 41% / 95%);
-}
-.post-item-author {
+
+.post-item .post-item-author {
+    font-size: 0.9rem;
     font-style: italic;
+    margin-top: -0.5rem;
+}
+.post-item .post-item-date {
+    font-size: 0.8rem;
+    margin-top: -0.5rem;
 }
 
 .post-actions {
@@ -34,6 +38,7 @@
     justify-content: center;
     align-items: center;
     gap: 1rem;
+    margin-top: 2rem;
 }
 
 .post-actions .btn-alt {
