--- a/views/ejs/blog/includes/post-item.ejs
+++ b/views/ejs/blog/includes/post-item.ejs
@@ -1,10 +1,12 @@
 <article class="post-item">
     <h2><%= post.title %></h2>
-    <p class="post-item-author"><address>By <%= post.author_name %></address></p>
+    <p class="post-item-author">By <%= post.author_name %> [<span class="post-item-date"><%= post.date.toLocaleDateString() %></span>]</p>
+    
     <p><%= post.summary %></p>
+    
     <div class="post-actions">
         <button class="btn btn-alt">Delete Post</button>
         <a href="...">Edit Post</a>
-        <a class="btn" href="...">View Post</a>
+        <a class="btn" href="<%= `${links.posts}/${post.id}` %>">View Post</a>
     </div>
 </article>
