--- a/views/ejs/blog/post-detail.ejs
+++ b/views/ejs/blog/post-detail.ejs
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <%- include('includes/head', { title: 'Post title' }) %>
+        <%- include('includes/head', { title: post.title }) %>
         <link rel="stylesheet" href="/blog/styles/posts.css" />
     </head>
 
     <body>
         <%- include('includes/header', links) %>
         <main id="post-detail">
-            <h1>...</h1>
-            <section id="post-meta">...</section>
+
+            <h1><%= post.title %></h1>
+
+            <section id="post-meta">
+                <address>
+                    <a href="<%= `mailto: ${post.author_email}?subject=${post.title}` %>"><%=post.author_name%></a>
+                </address>
+                <time datetime='<%=post.date.toISOString() %>'><%= post.date.toLocaleDateString('en-UK',{weekday:'long', year:'numeric',month:'long', day:'numeric'}) %></time>
+            </section>
+
             <hr />
+
             <section>
-                <p id="body">...</p>
+                <p id="body"><%= post.body %></p>
             </section>
         </main>
     </body>
