--- a/views/ejs/blog/includes/post-item.ejs
+++ b/views/ejs/blog/includes/post-item.ejs
@@ -1,6 +1,6 @@
 <article class="post-item">
     <h2><%= post.title %></h2>
-    <p class="post-item-author">By <%= post.author_name %> [<span class="post-item-date"><%= post.date.toLocaleDateString() %></span>]</p>
+    <p class="post-item-author">By <%= post.author.name %> [<span class="post-item-date"><%= post.date.toLocaleDateString() %></span>]</p>
     
     <p><%= post.summary %></p>
     
