add prisma for post details route.

--- a/views/ejs/blog/post-detail.ejs
+++ b/views/ejs/blog/post-detail.ejs
@@ -13,7 +13,7 @@
 
             <section id="post-meta">
                 <address>
-                    <a href="<%= `mailto: ${post.author_email}?subject=${post.title}` %>"><%=post.author_name%></a>
+                    <a href="<%= `mailto: ${post.author.email}?subject=${post.title}` %>"><%=post.author.name%></a>
                 </address>
                 <time datetime='<%=post.date.toISOString() %>'><%= post.date.toLocaleDateString('en-UK',{weekday:'long', year:'numeric',month:'long', day:'numeric'}) %></time>
             </section>
