--- a/views/ejs/blogmongodb/create-post.ejs
+++ b/views/ejs/blogmongodb/create-post.ejs
@@ -41,7 +41,7 @@
                     <label for="author">Select Author</label>
                     <select id="author" name="author">
                         <% data.authors.forEach(author => { %>
-                        <option value="<%= author.id %>">
+                        <option value="<%= author._id %>">
                             <%= author.name %> [<%= author.email %>]
                         </option>
                         <% }); %>
