--- a/views/ejs/blogmongodb/home.ejs
+++ b/views/ejs/blogmongodb/home.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <%- include('includes/head', { title: 'Home PAge' }) %>
+        <%- include('includes/head', { title: 'Home Page' }) %>
     </head>
 
     <body>
