--- a/views/ejs/blogmongodb/post-detail.ejs
+++ b/views/ejs/blogmongodb/post-detail.ejs
@@ -13,15 +13,15 @@
 
             <section id="post-meta">
                 <address>
-                    <a href="<%= `mailto: ${post.author_email}?subject=${post.title}` %>"><%=post.author_name%></a>
+                    <a href="<%= `mailto: ${post.author.email}?subject=${post.title}` %>"><%=post.author.name%></a>
                 </address>
-                <time datetime='<%=post.date.toISOString() %>'><%= post.date.toLocaleDateString('en-UK',{weekday:'long', year:'numeric',month:'long', day:'numeric'}) %></time>
+                <time datetime='<%=post.dateAdded.toISOString() %>'><%= post.dateAdded.toLocaleDateString('en-UK',{weekday:'long', year:'numeric',month:'long', day:'numeric'}) %></time>
             </section>
 
             <hr />
 
             <section>
-                <p id="body"><%= post.body %></p>
+                <p id="body"><%= post.content %></p>
             </section>
         </main>
     </body>
