--- a/views/ejs/blogmongodb/404.ejs
+++ b/views/ejs/blogmongodb/404.ejs
@@ -7,7 +7,7 @@
     <body>
         <%- include('includes/header', links) %>
         <main>
-            <h1>We could not find this resource!</h1>
+            <h1>[404] We could not find this resource!</h1>
             <p>Unfortunately, we were not able to find this resource.</p>
             <p><%= title %></p>
             <a class="btn" href="/">Back To Safety!</a>
