--- a/views/ejs/blogmongodb/500.ejs
+++ b/views/ejs/blogmongodb/500.ejs
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <%- include('includes/head', { title: 'Something went wrong!' }) %>
+        <%- include('includes/head', { title: title }) %>
     </head>
 
     <body>
         <%- include('includes/header', links) %>
         <main>
-            <h1>Oops, something went wrong!</h1>
+            <h1>[500] Oops, something went wrong!</h1>
             <p>
                 Unfortunately, something went wrong on our end - we're working
                 on fixing it!
