--- a/views/ejs/blogmongodb/post-detail.ejs
+++ b/views/ejs/blogmongodb/post-detail.ejs
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <%- include('includes/head', { title: post.title }) %>
+        <%- include('includes/head', { title: 'MHY::100 days' }) %>
         <link rel="stylesheet" href="/blog/styles/posts.css" />
+        <script src="/blog/scripts/comments.js" type='' defer></script>
     </head>
 
     <body>
@@ -23,6 +24,28 @@
             <section>
                 <p id="body"><%= post.content %></p>
             </section>
+
+            <section id="comments">
+                <p>
+                  This post might have comments. You can load them if you want to view
+                  them.
+                </p>
+                  <button id='load-comments-btn' data-postid="<%= post._id %>" class="btn btn-alt">Load Comments</button>
+              </section>
+              <section id="comments-form">
+                <h2>Leave a comment</h2>
+                <form id='commentsForm' data-postid="<%= post._id %>">
+                  <div class="form-control">
+                    <label for="title">Comment title</label>
+                    <input type="text" id="title" name="title" required />
+                  </div>
+                  <div class="form-control">
+                    <label for="text">Your comment</label>
+                    <textarea name="text" id="text" rows="3" required></textarea>
+                  </div>
+                  <button class="btn">Save Comment</button>
+                </form>
+              </section>
         </main>
     </body>
 </html>
